aggiunto styling e centrate box

--- a/index.html
+++ b/index.html
@@ -13,5 +13,23 @@
 
     <p>Block elements define the flow of the HTML document, while inline elements
        do not.</p>
+
+       <div class="button">Button</div>
   </body>
 </html>
+
+<!-- content, padding, border, margin
+
+    margin over padding
+        
+        1.The padding of a box has a background, while margins are always transparent.
+        2.Padding is included in the click area of an element, while margins aren’t.
+        3.Margins collapse vertically, while padding doesn’t (we’ll discuss this more in the next section).
+
+        Both <div> and <span> are “container” elements that don’t have any affect on the semantic structure of an HTML document.
+
+        The width and height properties only define the size of a box’s content. Its padding and border are both added on top of whatever explicit dimensions you set
+          box-sizing: border-box; 
+          
+        There are three methods for horizontally aligning block-level elements: “auto-margins” for center alignment, “floats” for left/right alignment, and “flexbox” for complete control over alignment. 
+        -->
