--- a/index.html
+++ b/index.html
@@ -32,4 +32,12 @@
           box-sizing: border-box; 
           
         There are three methods for horizontally aligning block-level elements: “auto-margins” for center alignment, “floats” for left/right alignment, and “flexbox” for complete control over alignment. 
-        -->
+        
+        Override dello styling del browsert
+
+            * {
+                margin: 0;
+                padding: 0;
+                box-sizing: border-box;
+            }
+    -->
